--- a/jacoco-beginner/jacoco-beginner-integration/pom.xml
+++ b/jacoco-beginner/jacoco-beginner-integration/pom.xml
@@ -35,6 +35,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.test-framework.providers</groupId>
+			<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+			<version>2.23</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
